Possibility for info box on projects

--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
                     </div>
                 </div>
                 <div class="border">
-                    <a class="link-button right" href="./pages/projects.html">See 9 more</a>
+                    <a class="link-button right" href="./pages/projects.html">See all 11</a>
                 </div>
             </div>
         </div>
