Updates to the information box

--- a/pages/projects-test.html
+++ b/pages/projects-test.html
@@ -86,7 +86,22 @@
                         <div class="project-card-border"></div>
                         <div class="project-card-border"></div>
 
-                        <div class="project-card-info accented-textbox"></div>
+                        <div class="project-card-info accented-textbox">
+                            <div class="project-card-info-content">
+                                <div class="project-card-info-text border">
+                                    <h3>Tails of Glimmervale</h3>
+                                    <p>
+                                        Say a lot about how the game works and the development time, maybe add in the itch pages?
+                                    </p>
+                                </div>
+                                <div class="project-card-info-img border">
+                                    <img src="https://img.itch.zone/aW1hZ2UvMjU0MDUxNS8xNTExODE1MC5wbmc=/original/9jP%2Bjd.png">
+                                    <p>
+                                        Text goes here
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
 
                         
 
